--- a/springcloud-eureka-serviceconsumer-feign/src/main/resources/application.yml
+++ b/springcloud-eureka-serviceconsumer-feign/src/main/resources/application.yml
@@ -11,3 +11,7 @@ eureka:
     serviceUrl:
 #      指定服务注册中心的地址
       defaultZone: http://localhost:8080/eureka/
+#启用hystrix
+feign:
+  hystrix:
+    enabled: true
