--- a/springcloud-eureka-serviceconsumer-ribbon/pom.xml
+++ b/springcloud-eureka-serviceconsumer-ribbon/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
 
         <!-- jaxb模块引用 - start -->
         <dependency>
