--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         <module>springcloud-eureka-serviceprovider</module>
 		<module>springcloud-eureka-serviceconsumer-ribbon</module>
 		<module>springcloud-eureka-serviceconsumer-feign</module>
+
+        <module>springcloud-config-server</module>
+        <module>springcloud-config-client</module>
+
+
 		
     </modules>
 
