--- a/springcloud-config-client/pom.xml
+++ b/springcloud-config-client/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+        　　　　
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!-- jaxb模块引用 - start -->
         <dependency>
