--- a/springcloud-config-server/pom.xml
+++ b/springcloud-config-server/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!-- jaxb模块引用 - start -->
         <dependency>
