--- a/springcloud-config-server/src/main/resources/application.yml
+++ b/springcloud-config-server/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8087
+  port: 8187
 
 # 服务与服务之间相互调用一般都是根据这个name 。
 spring:
@@ -18,3 +18,15 @@ spring:
           password: lbl0168
           # 指定分支，不指定默认是master
           default-label: master
+
+eureka:
+  client:
+    serviceUrl:
+      #      指定服务注册中心的地址
+      defaultZone: http://localhost:8080/eureka/
+
+# 心跳检测检测与续约时间
+# 【测试】时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
+  instance:
+    lease-renewal-interval-in-seconds: 1   # 每间隔1s，向服务端发送一次心跳，证明自己依然”存活“
+    lease-expiration-duration-in-seconds: 2 #告诉服务端，如果我2s之内没有给你发心跳，就代表我“死”了，将我踢出掉。
