--- a/springcloud-config-client/src/main/resources/bootstrap.yml
+++ b/springcloud-config-client/src/main/resources/bootstrap.yml
@@ -5,7 +5,17 @@ spring:
     config:
       #启动什么环境下的配置
       profile: dev
-      # 配置服务的URL
-      uri: http://127.0.0.1:8087/
       label: master
 
+      # 配置服务的URL【如果使用eureka，则不再写URL，使用下面的discovery的形式】
+#      uri: http://127.0.0.1:8087/
+
+      discovery:
+        enabled: true
+        service-id: springcloud-config-server # 指定配置中心的服务名称
+
+eureka:
+  client:
+    serviceUrl:
+      #      指定服务注册中心的地址
+      defaultZone: http://localhost:8080/eureka/
