--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
-        <spring.cloud.version>Finchley.SR2</spring.cloud.version>
+        <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.4</lombok.version>
@@ -28,7 +28,9 @@
         <module>springcloud-config-server</module>
         <module>springcloud-config-client</module>
 
-		
+        <module>springcloud-config-server-autorefresh</module>
+        <module>springcloud-config-client-autorefresh</module>
+
         <module>rabbitmq-helloworld</module>
 
     </modules>
