--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<module>springcloud-eureka-serviceconsumer-ribbon</module>
 		<module>springcloud-eureka-serviceconsumer-feign</module>
 
+        <module>springcloud-eureka-server-cluster</module>
+
         <module>springcloud-config-server</module>
         <module>springcloud-config-client</module>
 
