springcloud gateway 集成eureka集群

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>springcloud-config-client-autorefresh</module>
 
         <module>springcloud-gateway-helloworld</module>
+        <module>springcloud-gateway-witheureka</module>
 
         <module>rabbitmq-helloworld</module>
 
