--- a/springcloud-eureka-serviceprovider/src/main/resources/application.yml
+++ b/springcloud-eureka-serviceprovider/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8083
 
 # 服务与服务之间相互调用一般都是根据这个name 。
 spring:
@@ -10,6 +10,6 @@ eureka:
   client:
     serviceUrl:
 #      指定服务注册中心的地址
-      defaultZone: http://localhost:8080/eureka/
+#      defaultZone: http://localhost:8080/eureka/
       #上面是eureka单机注册中心。下面是eureka集群模式
-#      defaultZone: http://admin:123456@eureka2:8001/eureka/,http://admin:123456@eureka3:8002/eureka/,http://admin:123456@eureka2:8003/eureka/
+      defaultZone: http://admin:123456@eureka2:8001/eureka/,http://admin:123456@eureka3:8002/eureka/,http://admin:123456@eureka2:8003/eureka/
