--- a/springcloud-eureka-serviceconsumer-feign/src/main/resources/application.yml
+++ b/springcloud-eureka-serviceconsumer-feign/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
 spring:
   application:
     name: springcloud-eureka-serviceconsumer-feign
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
