--- a/springcloud-eureka-serviceprovider/pom.xml
+++ b/springcloud-eureka-serviceprovider/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <!-- jaxb模块引用 - start -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
