springcloud sleuth zipkin 使用rabbitmq

--- a/springcloud-eureka-serviceconsumer-feign/pom.xml
+++ b/springcloud-eureka-serviceconsumer-feign/pom.xml
@@ -49,6 +49,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
 
         <!-- jaxb模块引用 - start -->
         <dependency>
