--- a/springcloud-eureka-serviceprovider/pom.xml
+++ b/springcloud-eureka-serviceprovider/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
         <!-- jaxb模块引用 - start -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
