--- a/springcloud-eureka-serviceprovider/src/main/resources/application.yml
+++ b/springcloud-eureka-serviceprovider/src/main/resources/application.yml
@@ -6,11 +6,26 @@ spring:
   application:
     name: springcloud-eureka-serviceprovider
   zipkin:
-    base-url: http://localhost:9411
+#    base-url: http://localhost:9411
+    sender:
+      type: rabbit
+    enabled: true
   sleuth:
     sampler:
       #应采样的请求的概率。 例如。 应该对1.0  -  100％的请求进行抽样。 精度仅为整数（即不支持0.1％的迹线）。
       probability: 1.0
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: lbl
+    password: 123456
+    listener: # 这里配置了重试策略
+      direct:
+        retry:
+          enabled: true
+      simple:
+        retry:
+          enabled: true
 
 eureka:
   client:
